# project-wiki

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.claude/commands/: wiki-add-context.md  wiki-add-decision.md  wiki-update.md
.github/workflows/: release.yml
.wiki/: _graph.md  _index.md
.wiki/decisions/: claude-native-architecture.md
.wiki/domains/candidates/: _overview.md
.wiki/domains/scan/: _overview.md
ci/: wiki-validate.yml
docs/: getting-started.md  product-boundary.md  team-workflow.md
examples/: demo-v0.2.md
npm/cli/: package.json
npm/darwin-arm64/: package.json
npm/darwin-x64/: package.json
npm/linux-arm64/: package.json
npm/linux-x64/: package.json
npm/win32-x64/: package.json
proptest-regressions/wiki/: search.txt
src/: cli.rs  graph_utils.rs  i18n.rs  main.rs  verbosity.rs
src/init/: analyze.rs  candidates.rs  enrich.rs  git_hooks.rs  hooks.rs  mod.rs  notion.rs  patch_claude.rs  scaffold.rs  scan.rs
src/init/candidates/: heuristics.rs  render.rs  tests.rs
src/init/scan/: details.rs  generate.rs  imports.rs  mod.rs  refinement.rs  structure.rs
src/templates/: decision.md  domain_overview.md  env_example  graph.md  index.md  needs_review.md  wiki-check.yml
src/templates/commands/: wiki_consult.md
src/ui/: mod.rs
src/wiki/: add.rs  check_diff.rs  common.rs  config.rs  consult.rs  context.rs  drift.rs  file_index.rs  git_hook.rs  graph.rs  index.rs  manage.rs  mod.rs  note.rs  prioritize.rs  promote.rs  review.rs  search.rs  status.rs  validate.rs  vectors.rs
src/wiki/check_diff/: collect.rs  mod.rs  prioritize.rs  render.rs  resolve.rs  sensitivity.rs  tests.rs  warnings.rs
src/wiki/context/: render.rs  tests.rs
src/wiki/validate/: links.rs  mod.rs  (+1 more)
tests/: cli_tests.rs  property_tests.rs
