[package]
name = "project-wiki"
version = "0.2.0"
edition = "2024"
description = "Auto-managed project knowledge wiki for AI-assisted development"
license = "MIT OR Apache-2.0"
rust-version = "1.85.0"
repository = "https://github.com/agencedebord/project-wiki"
homepage = "https://github.com/agencedebord/project-wiki"
readme = "README.md"
keywords = ["wiki", "documentation", "cli", "knowledge-base", "ai"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "project-wiki"
path = "src/main.rs"

[features]
default = []
notion = ["dep:reqwest", "dep:futures", "dep:dialoguer"]

[dependencies]
# CLI
clap = { version = "4", features = ["derive", "env"] }

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

# HTTP client (Notion API)
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false, optional = true }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yml = "0.0.12"

# Filesystem
walkdir = "2"
ignore = "0.4"
glob = "0.3"

# Parallelism
rayon = "1"

# Async streams (concurrent fetching)
futures = { version = "0.3", optional = true }

# Terminal UI
indicatif = "0.17"
console = "0.15"
dialoguer = { version = "0.11", optional = true }

# Markdown front matter
gray_matter = "0.2"

# Regex
regex = "1"

# Error handling
anyhow = "1"

# Date/time
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
insta = { version = "1", features = ["yaml"] }
proptest = "1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
